# derive-sql

./: .gitignore  Cargo.toml  LICENSE  README.md  publish.sh
derive-sql/: Cargo.toml  README.md
derive-sql/derive_sql/: Cargo.toml
derive-sql/derive_sql/src/: implderive.rs  lib.rs
derive-sql/examples/: attributes.rs  simple.rs  test.rs
derive-sql/samples/: Cargo.toml
derive-sql/samples/src/: main.rs
derive-sql/src/: error.rs  generics.rs  lib.rs  middleware.rs  mock_sqlable.rs  proxy.rs  selectable.rs  sqlable.rs  structs.rs  traits.rs
derive-sql/src/generics/: paginate.rs  sqlite.rs
derive-sql/src/generics/sqlite/: database.rs  database_owned.rs
derive-sql/src/middleware/: sqlite.rs
derive-sql/src/middleware/sqlite/: conn.rs  log.rs
derive-sql/src/proxy/: log.rs  mysql.rs  postgres.rs  sqlite.rs
derive-sql/src/proxy/mysql/: conn.rs  log.rs
derive-sql/src/proxy/sqlite/: conn.rs  log.rs
derive-sql/src/selectable/: filter.rs  simplefilter.rs  simplelimit.rs  simpleoffset.rs  simpleorder.rs  value.rs
derive-sql/src/selectable/filter/: and.rs  generic.rs  or.rs
derive-sql/src/structs/: field.rs  filter.rs  order.rs
derive-sql/src/structs/filter/: and.rs  condition.rs  none.rs  or.rs  value.rs
derive-sql/src/structs/order/: and.rs  condition.rs  none.rs
derive-sql/src/traits/: delete.rs  execute.rs  filter.rs  flavor.rs  insert.rs  order.rs  params.rs  query.rs  row.rs  select.rs  sql.rs  table.rs  update.rs
derive-sql/src/traits/flavor/: sql_type.rs
examples/moma/: Cargo.toml  README.md
examples/moma/src/: config.rs  database.rs  error.rs  main.rs  run.rs  table.rs
examples/moma/src/run/: collect.rs  query_artwork_nationalities.rs  query_nationalities.rs
examples/moma/src/table/: artist.rs  artworks.rs
examples/mona/: Cargo.toml
examples/mona/src/: error.rs  main.rs  query.rs  table.rs
examples/mona/src/query/: create_table.rs  nationality.rs
examples/mona/src/table/: artist.rs
extras/derive-sql-common/: Cargo.toml
extras/derive-sql-common/src/: derive.rs  lib.rs
extras/derive-sql-common/src/derive/: fields.rs  sqltype.rs
extras/derive-sql-mysql/: Cargo.toml
extras/derive-sql-mysql/examples/: attributes_mysql.rs  simple_mysql.rs
extras/derive-sql-mysql/src/: lib.rs  mysql.rs
extras/derive-sql-mysql/src/mysql/: sqltype.rs
extras/derive-sql-sqlite/: Cargo.toml
extras/derive-sql-sqlite/examples/: attributes.rs  attributes_sqlite.rs  simple.rs  simple_sqlite.rs
extras/derive-sql-sqlite/src/: lib.rs  sqlite.rs
extras/derive-sql-sqlite/src/sqlite/: fields.rs  sqltype.rs
extras/derive-sql-statement/: Cargo.toml
extras/derive-sql-statement/examples/: attributes.rs  simple.rs
extras/derive-sql-statement/src/: lib.rs  statement.rs
extras/derive-sqlite/: Cargo.toml
extras/derive-sqlite/src/: lib.rs
extras/from-attributes/: Cargo.toml
extras/from-attributes/src/: derive.rs  lib.rs
src/: attributes.rs  derive_api.rs  derive_sql.rs  derive_wasm.rs  implderive.rs  implfilter.rs  implfilterwrapper.rs  implselect.rs  input.rs  lib.rs  sqltype.rs  utility.rs
src/attributes/: api.rs  sql.rs
src/derive_api/: actix.rs  lambda.rs  service.rs
src/derive_sql/: filter.rs  selector.rs  sqltype.rs
src/input/: field.rs
tests/: contact.rs  contact_v2.rs  error.rs  person.rs
