[package]
name = "derive-sql"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A Rust macro that implements methods that wraps common SQL statements"
repository = "https://github.com/juliendecharentenay/derive-sql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn          = { version = "1" }
quote        = "1"
proc-macro2  = "1"
simple-error = "0.2"

[dev-dependencies]
rusqlite = { version = "0.28" }
