[package]
name = "derive-sql"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A Rust macro that implements methods that wraps common SQL statements"
repository = "https://github.com/juliendecharentenay/derive-sql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn          = { version = "1" }
quote        = "1"
proc-macro2  = "1"
simple-error = "0.2"
convert_case = "0.6"
chrono       = { version = "0.4", optional = true }

[dev-dependencies]
rusqlite     = { version = "0.28", features = [ "chrono" ] }
syn          = { version = "1", features = [ "extra-traits" ] }

