[package]
name = "derive-sql"
version = "0.9.0"
edition = "2021"
license = "MIT"
description = "Structure the interaction with SQL databases - currently SQLite and MySQL via trait and a procedural macro"
repository = "https://github.com/juliendecharentenay/derive-sql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
rusqlite = { version = "0", features = [ "vtab" ], optional = true }
mysql    = { version = "24", optional = true }
log = "0"
thiserror = "1"
enum_dispatch = { version = "0" }

## Pub derive-sql-sqlite = { version = "0", optional = true }
derive-sql-sqlite = { path = "../extras/derive-sql-sqlite", optional = true }

## Pub derive-sql-mysql = { version = "0", optional = true }
derive-sql-mysql = { path = "../extras/derive-sql-mysql", optional = true }

[features]
default = [ ]
sqlite = [ "rusqlite", "derive-sql-sqlite" ]
mysql  = [ "dep:mysql", "derive-sql-mysql" ]

[package.metadata.docs.rs]
features = [ "sqlite", "mysql" ]

[dev-dependencies]
mockall = { version = "0" }
