[package]
name = "derive-sql"
version = "0.11.3"
edition = "2021"
license = "MIT"
description = "Structure the interaction with SQL databases - currently SQLite and MySQL via trait and a procedural macro"
repository = "https://github.com/juliendecharentenay/derive-sql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
rusqlite = { version = "0", features = [ "vtab", "chrono", ], optional = true }
fallible-iterator = { version = "0", optional = true }
mysql    = { version = "25", optional = true }
mysql_common = { version = "0", features = [ "chrono" ], optional = true }
log = "0"
thiserror = "1"
enum_dispatch = { version = "0" }
chrono = { version = "0" }

## Pub derive-sql-statement = { version = "0" }
derive-sql-statement = { path = "../extras/derive-sql-statement" }

## Pub derive-sql-sqlite = { version = "0", optional = true }
derive-sql-sqlite = { path = "../extras/derive-sql-sqlite", optional = true }

## Pub derive-sql-mysql = { version = "0", optional = true }
derive-sql-mysql = { path = "../extras/derive-sql-mysql", optional = true }

[features]
default = [ ]
sqlite = [ "rusqlite", "derive-sql-sqlite", "fallible-iterator" ]
mysql  = [ "dep:mysql", "mysql_common", "derive-sql-mysql" ]
compatibility_v0_10 = [ "derive-sql-mysql", "derive-sql-sqlite" ]

[package.metadata.docs.rs]
features = [ "sqlite", "mysql", "compatibility_v0_10" ]

[dev-dependencies]
mockall = { version = "0" }
