[package]
name = "derive_sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn          = { version = "1", feature = [ "extra-traits" ] }
quote        = "1"
proc-macro2  = "1"
simple-error = "0.2"

[dev-dependencies]
rusqlite = { version = "0.28" }
