[package]
name = "moma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-sql = { version = "0", features = [ "sqlite", "mysql", ] }
## derive-sql = { path = "../../derive-sql", features = [ "sqlite", "mysql", ] }
thiserror  = "1"
clap       = { version = "4", features = [ "derive" ] }
serde      = { version = "1", features = [ "derive" ] }
serde_json = { version = "1" }
reqwest    = { version = "0", features = [ "json" ] }
tokio      = { version = "1" , features = [ "rt-multi-thread" ] }
log        = { version = "0" }
env_logger = { version = "0" }
futures    = { version = "0", features = [ "executor" ] }
mysql_common = { version = "0", features = [ "chrono" ] }

