[package]
name = "derive-sql-common"
version = "0.9.0"
edition = "2021"
license = "MIT"
description = "Common functions supporting `derive-sql` and associated crates"
repository = "https://github.com/juliendecharentenay/derive-sql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = [ "full" ] }
attribute-derive = "0.8.1"

