[package]
name = "derive-sql-sqlite"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Accompany the `derive-sql` crate. Implements the `DeriveSqlite` procedural macro to implement trait for SQLite"
repository = "https://github.com/juliendecharentenay/derive-sql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
attribute-derive = "0"

[dev-dependencies]
# chrono = { version = "0" }
rusqlite = { version = "0", features = [ "chrono" ] }
derive-sql = { version = "0" }

