[package]
name = "derive-sql-sqlite"
version = "0.12.0"
edition = "2021"
license = "MIT"
description = "Accompany the `derive-sql` crate. Implements the `DeriveSqlite` procedural macro to implement trait for SQLite"
repository = "https://github.com/juliendecharentenay/derive-sql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
attribute-derive = "0.8.1"

## Pub derive-sql-common = { version = "0" }
derive-sql-common = { path = "../derive-sql-common" }

[dev-dependencies]
# chrono = { version = "0" }
rusqlite = { version = "0", features = [ "chrono" ] }
env_logger = "0"
log = "0"
## Pub derive-sql = { version = "0", features = [ "sqlite" ] }
derive-sql = { path = "../../derive-sql", features = [ "sqlite" ] }


