[package]
name = "derive-sql-statement"
version = "0.11.3"
edition = "2021"
license = "MIT"
description = "Accompany the `derive-sql` crate. Implements the `DeriveSqlStatement` procedural macro to implement traits allowing read/write/update/etc statement functionalities"
repository = "https://github.com/juliendecharentenay/derive-sql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
attribute-derive = "0.8.1"

derive-sql-common = { version = "0" }
## Dev derive-sql-common = { path = "../derive-sql-common" }

[dev-dependencies]
derive-sql = { version = "0", features = [ "sqlite", "mysql" ] }
## Dev derive-sql = { path = "../../derive-sql", features = [ "sqlite", "mysql" ] }

mysql = { version = "24" }
rusqlite = { version = "0", features = [ "chrono" ] }
env_logger = "0"
log = "0"

